--- a/azure-bicep-course/02-azure-pipelines/azure-bicep-devops-1-stage.yml
+++ b/azure-bicep-course/02-azure-pipelines/azure-bicep-devops-1-stage.yml
@@ -5,7 +5,7 @@ trigger: none
 
 variables:
   resourceGroupName: 'rg-bicep-demo-0017'
-  location: 'westeurope'
+  location: 'eastus'
   webAppName: 'bicep0017'
   templateFile: '01-bicep-webapp/webapp-linux.bicep'
 
