--- a/.github/workflows/Deploy-Azure-Bicep-2-jobs.yml
+++ b/.github/workflows/Deploy-Azure-Bicep-2-jobs.yml
@@ -12,8 +12,8 @@ on:
   workflow_dispatch:
 
 env:
-  RESOURCE_GROUP: rg-bicep-github-actions-20240224
-  WEBAPP_NAME: bicep-20240224
+  RESOURCE_GROUP: rg-bicep-github-actions-202402240644
+  WEBAPP_NAME: bicep-202402240644
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -44,9 +44,9 @@ jobs:
       - name: Preview Changes from Bicep
         uses: Azure/deployment-what-if-action@v1.0.0
         with:
-          subscription: ${{ secrets.SUBSCRIPTION_ID  }} # Subscription ID
+          subscription: ${{ secrets.AZURE_SUBSCRIPTION  }} # Subscription ID
           resourceGroup: $RESOURCE_GROUP # Resource group name
-          templateFile: 01-bicep-webapp/webapp-linux.bicep # ARM template or Bicep file
+          templateFile: ./azure-bicep-course/01-bicep-webapp/webapp-linux.bicep # ARM template or Bicep file
           # parametersFile: # optional # Parameters file for the ARM template or Bicep
           # Additional parameters to be applied on the ARM template or Bicep. Multiple parameters should be separated by spaces.
           additionalParameters: webAppName=$WEBAPP_NAME # optional
@@ -81,8 +81,8 @@ jobs:
       - name: Deploy Bicep to Azure
         uses: azure/arm-deploy@v1
         with:
-          subscriptionId: ${{ secrets.SUBSCRIPTION_ID }}
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.RESOURCE_GROUP }}
-          template: 01-bicep-webapp/webapp-linux.bicep
+          template: ./azure-bicep-course/01-bicep-webapp/webapp-linux.bicep
           parameters: webAppName=${{ env.WEBAPP_NAME }}
           failOnStdErr: false
